git commit -s --amend
Comments from Una Sriramachandra Rao:
Proceeding to run all test case runs for complete Test Error report.
Updated fix for permission issue (sudo), added missing library in dependencies
Updated with explicit searching logic for handling the platform (RedHat/Ubuntu) specific different
paths for the missing libncurses.so.5 and libtinfo.so.5 soft links
handling
Fix for missing dependent system libraries in upgraded VM (ubuntu)
the /usr/lib/x86_64-linux-gnu/libncurses.so.5 and /usr/lib/x86_64-linux-gnu/libtinfo.so.5
were missing, Fixed with softlinks incase of missing libs with link to existing so.6.4 versions

Fix for Maven Test Run blockers:
There were few incompatible versions of jococo(instrumentation lib) &
spring-cloud-contract-wiremock versions which had issues with Java 17
and SpringBot 3.2.0 so, We have fixed it using below libraries.
1) Jococo from random version to 0.8.8
2) Updated for java 17 compatible version 4.3.3 of spring-cloud-contract-wiremock

Runtime issues of jdk17
SO Parent pom.xml still had the BPMN Camunda Engine Version 7.22.0, changed to 7.21.0
BPM ProcessEngine Bean Creation issue fix (BPMN fix done on top of 35 patchset)

- Current Fixes

- Changes in flywaydb
- rest url fix,
- fixes for many dependencies update after we ran open rewrite recipes
- like migration recipes
-   1) org.openrewrite.java.migrate.jakarta.JavaxWsToJakartaWs,
-   2) org.openrewrite.java.migrate.nakarta.JavaxRsToJakartaRs,
-   3)org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta like jaxrs to Jakarta,
-   4) java 11 to java17 migration recipe,
-   5) flywaydb migration fix by the changing the supported compatible version 10.12.2 for latest java 17,
-      Spring 3.2 to overcome flywaydb migration blocker
-   6) REST URI Format Fixes
-   Summary: issues related to smoke test due to jaxrs-jakarta, openrewrite, flywaydb fixes
-            are merged in my local machine on top of patchset 36, build issue fixes .
-            Fixed cloud sleu